[tool.poetry]
name = "bigd"
version = "0.1.0"
description = ""
authors = ["Caterina Gazzotti <gazzotti.caterina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.19.0"
pandas = "^2.2.1"
kaggle = "^1.6.12"
apoc = "^0.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
